--- a/app/views/chart/index.html.erb
+++ b/app/views/chart/index.html.erb
@@ -1,4 +1,7 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<h3>Logo Will Go Here</h3>
+
+<div>
+	<div id="daily""></div>
+	<div id="weekly"></div>
+	<div id="monthly"></div>
+</div>
