--- a/app/views/chart/index.html.erb
+++ b/app/views/chart/index.html.erb
@@ -1,4 +1,4 @@
-link_to image_tag("icon.png") , "http://bigcommerce.com/"
+<% link_to(image_tag("icon.png") , "http://bigcommerce.com/") %>
 
 <div>
 	<div id="daily""></div>
