--- a/app/views/chart/index.html.erb
+++ b/app/views/chart/index.html.erb
@@ -1,7 +1,7 @@
 <% link_to(image_tag("BigCommerce_logo_dark.png") , "http://bigcommerce.com/") %>
 
 <div>
-	<div id="daily""></div>
+	<div id="daily"></div>
 	<div id="weekly"></div>
 	<div id="monthly"></div>
 </div>
