--- a/app/views/chart/index.html.erb
+++ b/app/views/chart/index.html.erb
@@ -1,5 +1,6 @@
-<% link_to(image_tag("BigCommerce_logo_dark.png") , "http://bigcommerce.com/") %>
-
+<%= link_to "http://bigcommerce.com/" %>
+	<%= image_tag("BigCommerce_logo_dark.png") %>
+<%= end %>
 <div>
 	<div id="daily"></div>
 	<div id="weekly"></div>
