--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= link_to image_tag("BigCommerce_logo_dark.png"), "http://bigcommerce.com" %>
     <%= yield %>
     <%= javascript_include_tag "build_charts" %>
   </body>
