--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= link_to image_tag("BigCommerce_logo_dark.png"), "http://bigcommerce.com" %>
+    # => <img alt="BigCommerce" style="width: 250px; height: auto;" />
     <%= yield %>
     <%= javascript_include_tag "build_charts" %>
   </body>
